compiler/plc_header_generator/src/tests/snapshots/plc_header_generator__tests__header_generator__case_1_global_primitives_generated_header_file.snap
---
source: compiler/plc_header_generator/src/tests/header_generator.rs
expression: "&generated_headers[0].get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef GLOBAL_PRIMITIVES
#define GLOBAL_PRIMITIVES

#include <dependencies.plc.h>

extern bool gVarBool;
extern int8_t gVarSInt;
extern int16_t gVarInt;
extern int32_t gVarDInt;
extern int64_t gVarLInt;
extern uint8_t gVarByte;
extern uint16_t gVarWord;
extern uint32_t gVarDWord;
extern uint64_t gVarLWord;
extern float_t gVarReal;
extern double_t gVarLReal;
extern time_t gVarDate;
extern time_t gVarDateAndTime;

#endif /* !GLOBAL_PRIMITIVES */
