compiler/plc_header_generator/src/tests/snapshots/plc_header_generator__tests__header_generator__case_2_global_complex_types_generated_header_file.snap
---
source: compiler/plc_header_generator/src/tests/header_generator.rs
expression: "&generated_headers[0].get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef GLOBAL_COMPLEX_TYPES
#define GLOBAL_COMPLEX_TYPES

#include <dependencies.plc.h>

extern char gVarString[255];
extern int16_t gVarWString[6000];
extern int16_t gVarIntArray[12];
extern int16_t* gVarRefToInt;
extern int16_t* gVarPointerToInt;
extern time_t* gVarRefToDate;
extern time_t* gVarPointerToDate;
extern int16_t gVarIntWithRange;

#endif /* !GLOBAL_COMPLEX_TYPES */
