compiler/plc_header_generator/src/tests/snapshots/plc_header_generator__tests__header_generator__case_3_enum_types_generated_header_file.snap
---
source: compiler/plc_header_generator/src/tests/header_generator.rs
expression: "&generated_headers[0].get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef ENUM_TYPES
#define ENUM_TYPES

#include <dependencies.plc.h>

typedef enum eSimpleEnumType {
    red = 0,
    green,
    blue
} SimpleEnumType;

typedef enum eComplexEnumType {
    orange = 10,
    yellow = 20,
    purple = 30
} ComplexEnumType;

#endif /* !ENUM_TYPES */
