compiler/plc_header_generator/src/tests/snapshots/plc_header_generator__tests__header_generator__case_4_structs_generated_header_file.snap
---
source: compiler/plc_header_generator/src/tests/header_generator.rs
expression: "&generated_headers[0].get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef STRUCTS
#define STRUCTS

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef enum eComplexEnumType {
    orange = 10,
    yellow = 20,
    purple = 30
} ComplexEnumType;

typedef struct {
    uint8_t Field1;
    int16_t Field2;
    int32_t Field3;
} StructWithPrimitiveTypes;

typedef struct {
    uint8_t byteField;
    int16_t intField;
    int32_t dIntField;
    char stringField[255];
    int16_t wStringField[6000];
    ComplexEnumType complexEnumTypeField;
    int16_t intArrayField[10];
} StructWithComplexTypes;

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !STRUCTS */
