compiler/plc_header_generator/src/tests/snapshots/plc_header_generator__tests__header_generator__case_5_functions_with_primitive_types_generated_header_file.snap
---
source: compiler/plc_header_generator/src/tests/header_generator.rs
expression: "&generated_headers[0].get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef FUNCTIONS_WITH_PRIMITIVE_TYPES
#define FUNCTIONS_WITH_PRIMITIVE_TYPES

#include <stdint.h>
#include <math.h>
#include <stdbool.h>

#include <dependencies.plc.h>

void fnThatIsVoid(int16_t varIntInput);

int16_t fnThatReturnsInt(float_t varRealInputToFunc, int16_t varIntInputToFunc, time_t varDateAndTimeInputToFunc, float_t* varRealInOutFunc, int16_t* varIntOutputFunc);

time_t fnThatReturnsTimeOfDay(time_t varDateTimeInput);

#endif /* !FUNCTIONS_WITH_PRIMITIVE_TYPES */
