compiler/plc_header_generator/src/tests/snapshots/plc_header_generator__tests__header_generator__case_6_functions_with_complex_types_generated_header_file.snap
---
source: compiler/plc_header_generator/src/tests/header_generator.rs
expression: "&generated_headers[0].contents"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#include <dependencies.plc.h>




// User-defined data types
typedef enum eComplexEnumType {
    orange = 10,
	yellow = 20,
	purple = 30
} ComplexEnumType;

typedef struct {
    uint8_t Field1;
	int16_t Field2;
	int32_t Field3;
} StructWithPrimitiveTypes;

typedef struct {
    uint8_t byteField;
	int16_t intField;
	int32_t dIntField;
	char stringField[256];
	int16_t wStringField[6001];
	ComplexEnumType complexEnumTypeField;
	int16_t intArrayField[10];
} StructWithComplexTypes;



// Functions, Function Blocks and Programs
StructWithPrimitiveTypes fnThatUsesStructWithPrimitiveTypes(StructWithPrimitiveTypes* varStruct);

StructWithComplexTypes fnThatUsesStructWithComplexTypes(StructWithComplexTypes* varStruct, ComplexEnumType varEnum, char* varString, int16_t* varIntArray);

void fnThatUsesPrimitiveTypesAndReferences(int16_t varInt, int16_t* varRefToInt, int16_t* varPointerToInt, time_t* varRefToDate, time_t* varPointerToDate);

void fnThatHasIntWithRange(int16_t varIntWithRange);

void fnThatHasVariadicIntInput(int16_t varIntInput, ...);

void fnThatHasVariadicStringInput(int16_t varIntInput, ...);

void fnThatHasVariadicComplexTypeInput(int16_t varIntInput, ...);
