compiler/plc_header_generator/src/tests/snapshots/plc_header_generator__tests__header_generator__case_8_function_blocks_with_inheritance_generated_header_file.snap
---
source: compiler/plc_header_generator/src/tests/header_generator.rs
expression: "&generated_headers[0].get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef FUNCTION_BLOCKS_WITH_INHERITANCE
#define FUNCTION_BLOCKS_WITH_INHERITANCE

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct {
    uint64_t* __vtable;
    int16_t varGreatGrandParentInt;
} fbGreatGrandParent_type;

typedef struct {
    fbGreatGrandParent_type __fbGreatGrandParent;
    int16_t varGrandParentInt;
} fbGrandParent_type;

typedef struct {
    fbGrandParent_type __fbGrandParent;
    int16_t varParentInt;
} fbParent_type;

typedef struct {
    fbParent_type __fbParent;
    int16_t varChildInt;
} fbChild_type;

void __fbGreatGrandParent__init(fbGreatGrandParent_type* self);

void fbGreatGrandParent(fbGreatGrandParent_type* self);

void __fbGrandParent__init(fbGrandParent_type* self);

void fbGrandParent(fbGrandParent_type* self);

void __fbParent__init(fbParent_type* self);

void fbParent(fbParent_type* self);

void __fbChild__init(fbChild_type* self);

void fbChild(fbChild_type* self);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !FUNCTION_BLOCKS_WITH_INHERITANCE */
